[package]
name = "day_9"
version = "0.1.0"
authors = ["Sam Kearney <samuelmkearney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode_computer = { version = "0.1.0", path = "../intcode_computer" }
permutohedron = "0.2.4"
